# insight-flow

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  brand-designs.html  config.yaml  docker-compose.yml  favorites_2026_3_7.html
.spec/: PRD.md  (+6 more)
backend/: alembic.ini  check_sources.py  pyproject.toml  test_validate.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260301_0001_init_schema.py  20260301_0002_add_trace_fields.py  20260301_0003_add_monitor_destination_ids.py  20260302_0004_add_monitor_source_overrides.py  20260302_0005_report_type_replace_depth.py  20260303_0006_add_monitor_id_to_collect_tasks.py  20260303_0007_add_monitor_window_hours.py  20260303_0008_add_run_events.py  20260304_0009_add_monitor_ai_routing.py  20260319_0010_add_academic_paper_tables.py  20260320_0011_add_destination_instances.py  (+2 more)
backend/app/: __init__.py  bootstrap.py  config.py  main.py
backend/scripts/: export_monitor_test_data.py  generate_site_profiles_from_presets.py  migrate_monitor_source_overrides_max_items.py  replay_monitor_after_window.py  run_codex_mvp_chain.py  smoke_e2e.py  sync_sources_from_presets.py  validate_site_profile.py
backend/tests/: api_test_helpers.py  conftest.py  test_api_contract_v1.py  test_api_persistence_sources_articles_tasks_v1.py  test_api_persistence_v1.py  test_bootstrap_infer_collect_method.py  test_bootstrap_seed_initial_data.py  test_local_frontend_port.py  test_monitor_agent_langchain.py  test_monitor_agent_runtime.py  test_sources_api.py
(+447 files in other folders)
